[fix]: html (overflow)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,7 +99,6 @@ section.text .top {
 
 section.text .center {
   height: calc(100vh - 100px);
-  overflow-y: scroll;
 }
 
 section.text .bottom,
@@ -168,6 +167,7 @@ aside .top .notifications button.icon {
     width: 60%;
     height: 10%;
     padding: 8px;
+    margin: 10px 0;
   }
 
   .msg-sent {
